<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_edit_text"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="8pt"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/body"
            android:textStyle="bold"
            android:textSize="10pt"
            android:textColor="@color/main" />

        <Button
            android:id="@+id/btn_oke"
            android:layout_width="100dp"
            android:layout_marginTop="20dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_button"
            android:clickable="true"
            android:text="@string/oke"
            android:textSize="6pt"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>