<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/name"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="@+id/iv_photo"
            app:layout_constraintEnd_toEndOf="@id/iv_photo"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"/>

       <EditText
            android:id="@+id/et_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/palindrome"
           android:fontFamily="@font/poppins_regular"
           android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintEnd_toEndOf="@id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/et_name"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/et_check"
            app:layout_constraintStart_toStartOf="@id/et_check"
            app:layout_constraintEnd_toEndOf="@+id/et_check"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="40dp"
            android:text="@string/check" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_check"
            app:layout_constraintStart_toStartOf="@id/btn_check"
            app:layout_constraintEnd_toEndOf="@+id/btn_check"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="10dp"
            android:text="@string/next" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>